Updating sponsors andding volunteer link

--- a/_data/nav.yml
+++ b/_data/nav.yml
@@ -6,9 +6,9 @@
 
 - text: Schedule
   href: /schedule/
-  
-- text: Sponsor
-  href: /sponsor/
+
+- text: Volunteer
+  href: https://www.kindnessconnect.com/fstoco/
 
 - text: Buy Tickets
   href: https://fstoconf15.eventbrite.ca/
