rainbow pattern speakers update

--- a/_data/nav.yml
+++ b/_data/nav.yml
@@ -7,5 +7,5 @@
 - text: Schedule
   href: /schedule/
 
-- text: Volunteer
-  href: https://www.kindnessconnect.com/fstoco/
+- text: Mobile App
+  href: http://eventmobi.com/fstoconf15/
